package Patron;

public interface Observer {
    public void update();
}
